// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalogGrid 325px fixed-width snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  style={
    Object {
      "borderColor": "black",
      "borderStyle": "solid",
      "borderWidth": 1,
      "margin": "0 auto",
      "width": 325,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
  </div>
</div>
`;

exports[`CatalogGrid 450px fixed-width snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  style={
    Object {
      "borderColor": "black",
      "borderStyle": "solid",
      "borderWidth": 1,
      "margin": "0 auto",
      "width": 450,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
  </div>
</div>
`;

exports[`CatalogGrid 650px fixed-width snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  style={
    Object {
      "borderColor": "black",
      "borderStyle": "solid",
      "borderWidth": 1,
      "margin": "0 auto",
      "width": 650,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
  </div>
</div>
`;

exports[`CatalogGrid 960px fixed-width snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  style={
    Object {
      "borderColor": "black",
      "borderStyle": "solid",
      "borderWidth": 1,
      "margin": "0 auto",
      "width": 960,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
    <div
      className="c1"
    >
      CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
    </div>
  </div>
</div>
`;

exports[`CatalogGrid contain vs fit snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
</div>
`;

exports[`CatalogGrid custom badge label snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif","badgeLabels":"[Object]"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif","badgeLabels":"[Object]"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif","badgeLabels":"[Object]"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif","badgeLabels":"[Object]"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif","badgeLabels":"[Object]"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif","badgeLabels":"[Object]"})
  </div>
</div>
`;

exports[`CatalogGrid custom placeholder image snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/path/to/custom/placeholder.png"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/path/to/custom/placeholder.png"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/path/to/custom/placeholder.png"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/path/to/custom/placeholder.png"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/path/to/custom/placeholder.png"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/path/to/custom/placeholder.png"})
  </div>
</div>
`;

exports[`CatalogGrid default responsive snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  margin: 0;
  max-width: 100%;
  padding: 12px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
  <div
    className="c1"
  >
    CatalogGridItem({"product":"[Object]","currencyCode":"USD","placeholderImageURL":"/resources/placeholder.gif"})
  </div>
</div>
`;
